# Veltrix

./: .clippy.toml  CHANGELOG.md  Cargo.toml  README.md  build_log.txt  check.txt  check2.txt  check3.txt  check4.txt  check5.txt  check6.txt  check7.txt  check8.txt  check9.txt  check_batch.txt  check_pipeline.txt  check_pong.txt  check_pong2.txt  check_pong3.txt  rustfmt.toml
.github/workflows/: ci.yml
assets/shaders/: shape.wgsl  sprite.wgsl
docs/: hello_world.md
examples/: full_game_demo.rs  hello_window.rs  physics_demo.rs  pong.rs  sprite_demo.rs  tilemap_demo.rs
src/: lib.rs
src/animation/: clip.rs  controller.rs  mod.rs  tween.rs
src/assets/: cache.rs  handle.rs  loader.rs  mod.rs  server.rs
src/audio/: bus.rs  clip.rs  manager.rs  mod.rs  spatial.rs
src/camera/: camera2d.rs  follow.rs  mod.rs  shake.rs
src/core/: config.rs  engine.rs  error_screen.rs  event.rs  game_loop.rs  mod.rs  time.rs
src/ecs/: commands.rs  mod.rs  query.rs  resources.rs  storage.rs  system.rs  world.rs
src/input/: action_map.rs  gamepad.rs  keyboard.rs  mod.rs  mouse.rs
src/math/: circle.rs  mod.rs  rect.rs  transform2d.rs  utils.rs
src/physics/: collision.rs  mod.rs  raycast.rs  sync.rs  world.rs
src/platform/: clipboard.rs  filesystem.rs  mod.rs  system_info.rs
src/renderer/: color.rs  device.rs  mod.rs  particles.rs  pipeline.rs  shader.rs  sprite_batcher.rs  text.rs  texture.rs
src/scene/: components.rs  loader.rs  manager.rs  mod.rs  scene.rs  transitions.rs
src/scripting/: behavior.rs  coroutine.rs  mod.rs  state_machine.rs
src/serialization/: mod.rs  save_game.rs  scene_serializer.rs
src/tilemap/: mod.rs  renderer.rs  tiled_loader.rs  tilemap.rs  tileset.rs
src/ui/: canvas.rs  debug_overlay.rs  layout.rs  mod.rs  style.rs  widgets.rs
src/window/: manager.rs  mod.rs
